# qiskit-alice-bob-provider

./: .envrc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  flake.nix  package.json  pnpm-lock.yaml  pylintrc  pyproject.toml
.github/workflows/: main.yml
qiskit_alice_bob_provider/: __init__.py  backend.py  custom_functions.py  custom_instructions.py  ensure_preparation_pass.py  errors.py  job.py  provider.py  qir_to_qiskit.py  translation_plugin.py  utils.py
qiskit_alice_bob_provider/api/: __init__.py  client.py  jobs.py
qiskit_alice_bob_provider/local/: __init__.py  backend.py  coupling_maps.py  instruction_durations.py  job.py  noise_model.py  proc_to_qiskit.py  provider.py  quantum_errors.py  readout_errors.py  sampler.py  target.py  translation_plugin.py
qiskit_alice_bob_provider/local/patch/: local_noise_pass.py  substitute_node_with_dag.py
qiskit_alice_bob_provider/local/resources/: lescanne_2020.json
qiskit_alice_bob_provider/plugins/: ab_asap.py  sk_synthesis.py  solovay_kitaev.py  state_preparation.py
qiskit_alice_bob_provider/processor/: __init__.py  custom_cat.py  custom_logical_cat.py  description.py  interpolated_cat.py  logical_cat.py  physical_cat.py  utils.py
qiskit_alice_bob_provider/processor/serialization/: __init__.py  interpolate.py  model.py
qiskit_alice_bob_provider/remote/: __init__.py  backend.py  display.py  job.py  provider.py  qir_to_qiskit.py  translation_plugin.py  utils.py
qiskit_alice_bob_provider/remote/api/: client.py  jobs.py  models.py  targets.py  version.py
tests/: conftest.py  test_against_real_server.py  test_api.py  test_backend.py  test_ensure_preparation_pass.py  test_provider.py  test_qir_to_qiskit.py  test_translation_plugin.py  test_utils.py
tests/local/: processor_fixture.py  test_backend.py  test_control_flow_operators.py  test_coupling_maps.py  test_instruction_durations.py  test_noise_model.py  test_proc_to_qiskit.py  test_provider.py  test_quantum_errors.py  test_readout_errors.py  test_scheduling.py  test_simulation.py  test_target.py  test_translation_plugin.py
tests/plugins/: test_state_preparation.py
tests/processor/: test_custom_cat.py  test_custom_logical_cat.py  test_interpolated_cat.py  test_logical_cat.py  test_physical_cat.py  test_utils.py
tests/processor/serialization/: test_interpolation.py
tests/processor/serialization/data/: 1d_instruction.json  2d_instruction.json  all_types.json  duplicate_instructions.json  no_quantum.json  one_point.json  one_point_no_quantum.json
tests/remote/: test_against_real_server.py  test_api.py  test_backend.py  test_version.py
tests/resources/: test_translation_plugin_and_qir.ll
